--- a/style.css
+++ b/style.css
@@ -9,6 +9,24 @@ body {
 	color: #333;
 	padding: 2vh 4px 0;
 }
+a {
+	color: #f1582a;
+	text-decoration: none;
+}
+.loader {
+	background: #ebc2b5;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 999;
+	transition: 0.3s linear;
+}
+.loader.hidden {
+	visibility: hidden;
+	opacity: 0;
+}
 .notscroll {
 	position: relative;
   overflow: hidden;
@@ -161,7 +179,7 @@ tr:hover td:nth-last-child(4) {
 thead {
   position: sticky;
   top: 0;
-  z-index: 998;
+  z-index: 996;
 }
 tr {
   background: #fff;
@@ -256,9 +274,37 @@ button.edit-btn {
   align-items: center;
   justify-content: center;
 }
+.not-data {
+	text-align: center;
+	position: absolute;
+	top: 150px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 100%;
+	max-width: 320px;
+	z-index: 999;
+	display: none;
+	font-size: 12px;
+}
+.not-data.show {
+	display: block;
+}
+.not-data span {
+	color: #999;
+}
+.not-data div {
+	color: #f1582a;
+	margin: 10px 0;
+}
 .created {
   padding: 4px 10px;
   margin-top: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 998;
+  background: #ebc2b5;
 }
 .created .by {
   color: rgb(96, 96, 96);
@@ -266,7 +312,7 @@ button.edit-btn {
   text-align: center;
 }
 .created .by a {
-  color: gray;
+  color: rgb(96, 96, 96);
   text-decoration: none;
 }
 .search-box {
@@ -403,6 +449,95 @@ button.edit-btn {
 	padding: 0;
 	min-width: 80px;
 	max-width: 80px;
+}
+/*** bagian pengguna ***/
+.form-user {
+	background: #ebc2b5;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 997;
+	padding: 20px;
+}
+.form-user.hidden {
+	display: none;
+}
+.form-user .box {
+	width: 100%;
+	max-width: 480px;
+	margin: auto;
+	padding: 20px;
+	background: #fff;
+	border-radius: 6px;
+}
+.form-user .box h1 {
+	color: #f1582a;
+	text-align: center;
+	font-size: 20px;
+}
+.form-user .box h1 .fa-calculator {
+	width: 17px;
+	height: 20px;
+	font-size: 18px;
+}
+.form-user .box form {
+	padding: 20px;
+	border-radius: 6px;
+	margin-top: 20px;
+	box-shadow: 0 0 0 1px #eee, 0 2px 1px #ddd;
+	margin: 20px 0 30px;
+}
+.form-user .box form .row {
+	display: block;
+}
+.form-user .box form .row input {
+	height: 42px;
+	padding: 0 45px;
+	font-size: 16px;
+}
+.form-user .box form .row input[type="text"] {
+	padding-right: 10px;
+}
+.form-user .box form .row .col {
+	position: relative;
+}
+.form-user .box form .row .col .pos-start,
+.form-user .box form .row .col .pos-end {
+	position: absolute;
+	left: 1px;
+	top: 7px;
+	width: 40px;
+	height: 40px;
+	background: #fff;
+	color: #ccc;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 5px 0 0 5px;
+	border-right: 1px solid #ddd;
+}
+.form-user .box form .row .col .pos-end {
+	border-radius: 0 5px 5px 0;
+	left: auto;
+	right: 1px;
+	border: none;
+	border-left: 1px solid #ddd;
+}
+.form-user .box form .row .col .pos-end .fa-eye {
+	color: #999;
+}
+.form-user .box form .row button[type="submit"] {
+	width: 100%;
+	max-width: 200px;
+	margin: 20px auto;
+	display: block;
+	font-size: 16px;
+}
+.form-user .box .footer {
+	text-align: center;
+	font-size: 14px;
 }
 @media screen and (max-width: 768px) {
   body {
